[package]
name = "pensieve_os"
version = "0.1.0"
authors = ["TheWebDevel <sathish@skcript.com>"]
edition = "2018"

[dependencies]

# The profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic


# The profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic